# img

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
env/: img_conda_list_2026-06-26.txt  img_conda_list_2026-06-26_post_install.txt  img_pip_freeze_2026-06-26.txt  img_pip_freeze_2026-06-26_post_install.txt
links/cell_seg/: README.md  cell_segmentation_Saumya.tif
plan/cell_seg/: 00.package_install_plan.md  01.nuclei_segmentation_plan.md  02.watershed_baseline_plan.md
report/cell_seg/: 01.nuclei_segmentation_findings.md  02.zcrop_deep_slice_results.md
scripts/: common.py
scripts/cell_seg/: 01.preview_channels.py  02.segment_nuclei_cellpose.py  02b.segment_watershed.py  02c.segment_nuclei_cellpose_3d.py  02d.segment_nuclei_cellpose_enhanced.py  02e.segment_nuclei_cellpose_zcrop.py  02f.split_doublets.py  03.measure_and_qc.py
src/img/: main.py  utils.py
