[project]
name = "img"
version = "0.1.0"
description = "Image processing"
authors = [
    {name = "Fangming Xie", email = "fmxie1993@gmail.com"}
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
